@@ -860,24 +860,6 @@ Description: Python-UNO bridge
  or the built in StarBasic scripting language.
 Homepage: http://udk.openoffice.org/python/python-bridge.html
 
-Package: libreoffice-officebean
-Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el powerpc ppc64 ppc64el s390x sparc64 powerpcspe kfreebsd-amd64 kfreebsd-i386
-Section: java
-Depends: libofficebean-java,
-         libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${binary:Version}),
-         ${java-runtime-depends},
-         ${java:Depends},
-         ${misc:Depends},
-         ${shlibs:Depends}
-Breaks: libofficebean-java (<< 1:6.4.0~rc1-6)
-Replaces: libofficebean-java (<< 1:6.4.0~rc1-6)
-Description: office productivity suite -- Java bean
- LibreOffice is a full-featured office productivity suite that provides
- a near drop-in replacement for Microsoft(R) Office.
- .
- This package contains binaries for the the LibreOffice Office Bean for
- embedding LibreOffice in custom Java applications.
-
 Package: libreoffice-script-provider-python
 Architecture: all
 Section: python
@@ -1049,17 +1031,35 @@ Description: LibreOffice UNO runtime environment -- UNO interface library
  .
  This package contains the precompiled Java interfaces of the LibreOffice API
 
+Package: libreoffice-officebean
+Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el powerpc ppc64 ppc64el s390x sparc64 powerpcspe kfreebsd-amd64 kfreebsd-i386
+Section: oldlibs
+Depends: libofficebean-java (>= 1:6.4.0~rc2),
+         libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${binary:Version})
+Description: transitional package for libofficebean-java
+ LibreOffice is a full-featured office productivity suite that provides
+ a near drop-in replacement for Microsoft(R) Office.
+ .
+ This package formerly contained binaries for the the LibreOffice Office Bean
+ for embedding LibreOffice in custom Java applications.
+ .
+ This has now been merged into libofficebean-java so this package can safely
+ be removed.
+
 Package: libofficebean-java
 Section: java
 Depends: libjuh-java,
          libjurt-java,
          libridl-java,
          libunoil-java,
+         ${java-runtime-depends},
          ${java:Depends},
-         ${misc:Depends}
-Architecture: all
-Replaces: libreoffice-officebean (<< 1:6.4.0~rc1-6)
-Breaks: libreoffice-officebean (<< 1:6.4.0~rc1-6)
+         ${misc:Depends},
+         ${shlibs:Depends}
+Recommends: libreoffice-core | libreoffice-core-nogui
+Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el powerpc ppc64 ppc64el s390x sparc64 powerpcspe kfreebsd-amd64 kfreebsd-i386
+Replaces: libreoffice-officebean (<< 1:6.4.0~rc2-1)
+Breaks: libreoffice-officebean (<< 1:6.4.0~rc2-1)
 Description: A generic Java Bean wrapper for LibreOffice components
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
