@@ -637,24 +637,6 @@ Description: Python-UNO bridge
  or the built in StarBasic scripting language.
 Homepage: http://udk.openoffice.org/python/python-bridge.html
 
-Package: libreoffice-officebean
-Architecture: %OOO_JAVA_ARCHS%
-Section: java
-Depends: libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${binary:Version}),
-         libofficebean-java,
-         ${java-runtime-depends},
-         ${java:Depends},
-         ${misc:Depends},
-         ${shlibs:Depends}
-Breaks: libofficebean-java (<< 1:6.4.0~rc1-6)
-Replaces: libofficebean-java (<< 1:6.4.0~rc1-6)
-Description: office productivity suite -- Java bean
- LibreOffice is a full-featured office productivity suite that provides
- a near drop-in replacement for Microsoft(R) Office.
- .
- This package contains binaries for the the LibreOffice Office Bean for
- embedding LibreOffice in custom Java applications.
-
 Package: libreoffice-script-provider-python
 Architecture: all
 Section: python
@@ -814,13 +796,32 @@ Description: LibreOffice UNO runtime environment -- UNO interface library
  .
  This package contains the precompiled Java interfaces of the LibreOffice API
 
+Package: libreoffice-officebean
+Architecture: %OOO_JAVA_ARCHS%
+Section: oldlibs
+Depends: libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${binary:Version}),
+         libofficebean-java (>= 1:6.4.0~rc2),
+Description: transitional package for libofficebean-java
+ LibreOffice is a full-featured office productivity suite that provides
+ a near drop-in replacement for Microsoft(R) Office.
+ .
+ This package formerly contained binaries for the the LibreOffice Office Bean
+ for embedding LibreOffice in custom Java applications.
+ .
+ This has now been merged into libofficebean-java so this package can safely
+ be removed.
+
 Package: libofficebean-java
 Section: java
 Depends: libridl-java, libunoil-java, libjurt-java, libjuh-java,
-         ${java:Depends}, ${misc:Depends}
-Architecture: all
-Replaces: libreoffice-officebean (<< 1:6.4.0~rc1-6)
-Breaks: libreoffice-officebean (<< 1:6.4.0~rc1-6)
+         ${java-runtime-depends},
+         ${java:Depends},
+         ${shlibs:Depends},
+         ${misc:Depends}
+Recommends: libreoffice-core | libreoffice-core-nogui
+Architecture: %OOO_JAVA_ARCHS%
+Replaces: libreoffice-officebean (<< 1:6.4.0~rc2-1)
+Breaks: libreoffice-officebean (<< 1:6.4.0~rc2-1)
 Description: A generic Java Bean wrapper for LibreOffice components
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
