@@ -978,11 +978,11 @@ export JAVA_HOME
   ifeq "$(ENABLE_NLPSOLVER)" "y"
 	CONFIGURE_FLAGS_INDEP += --enable-ext-nlpsolver
   endif
-	OOO_OFFICEBEAN_DEP = libreoffice-officebean
+	OOO_OFFICEBEAN_DEP = libofficebean-java
 	BUILD_DEPS += , javahelper $(JAVAHELPER_MIN_VERSION) <!nojava>
 else
 	CONFIGURE_FLAGS += --without-java
-	DEBHELPER_OPTIONS += -Nlibreoffice-officebean -Nlibreoffice-java-common -Nlibreoffice-script-provider-bsh -Nlibreoffice-script-provider-js
+	DEBHELPER_OPTIONS += -Nlibofficebean-java -Nlibreoffice-java-common -Nlibreoffice-script-provider-bsh -Nlibreoffice-script-provider-js
 endif
 
 ifeq "$(ENABLE_JAVA)" "y"
@@ -2712,10 +2712,24 @@ ifeq "$(ENABLE_JAVA)" "y"
 	# move the officebean so into libreoffice-officebean
 	# the jar will be installed (into libofficebean-java)
 	# using mh_ in install-indep
-	rm -rf $(PKGDIR)-officebean
-	mkdir -p -m755 $(PKGDIR)-officebean/$(OODIR)/program
+	rm -rf debian/libofficebean-java
+	mkdir -p -m755 debian/libofficebean-java/usr/lib/jni
+	mkdir -p -m755 debian/libofficebean-java/$(OODIR)/program
 	mv $(PKGDIR)-core/$(OODIR)/program/libofficebean.so \
-		$(PKGDIR)-officebean/$(OODIR)/program
+		debian/libofficebean-java/usr/lib/jni
+	cd debian/libofficebean-java/$(OODIR)/program && \
+		ln -s /usr/lib/jni/libofficebean-java/libofficebean.so libofficebean.so
+	sed -e s/@version@/$(shell echo $(DEB_VERSION_UPSTREAM) | cut -d~ -f1)/ \
+		< $(SOURCE_TREE)/bean/pom.officebean.xml > debian/pom.officebean.xml
+	mh_installpoms -plibofficebean-java
+	mh_installjar -plibofficebean-java -l debian/pom.officebean.xml instdir/program/classes/officbean.jar
+	# create symlink where LO expects it
+	mkdir -p $(CURDIR)/debian/libofficebean-java/$(OODIR)/program/classes
+	cd $(CURDIR)/debian/libofficebean-java/$(OODIR)/program/classes
+	ln -s /usr/share/java/officebean.jar officebean.jar
+	# fix up Class-Path
+	jh_classpath --classpath="ridl.jar unoil.jar jurt.jar juh.jar" \
+		debian/libofficebean-java/usr/share/java/officebean.jar
 endif
 
 	mkdir -p -m755 $(PKGDIR)-base/usr/share/applications \
@@ -2934,7 +2948,7 @@ ifeq "$(ENABLE_JAVA)" "y"
 	mkdir -p $(PKGDIR)-java-common/$(shell echo $(OODIR) | sed -e s/lib/share/)/program/classes
 	mv $(PKGDIR)-common/$(OODIR)/share/Scripts/java \
 		$(PKGDIR)-java-common/$(OODIR)/share/Scripts
-	# remove unoil and officbean; installed later by mh_* and in extra packages anyway
+	# remove unoil and officbean; installed later/in install-arch by mh_* and in extra packages anyway
 	rm -f $(PKGDIR)-common/$(OODIR)/program/classes/unoil.jar
 	rm -f $(PKGDIR)-common/$(OODIR)/program/classes/officebean.jar
 	# and move the rest 
@@ -3219,22 +3233,18 @@ ifeq "$(ENABLE_JAVA)" "y"
 		< $(SOURCE_TREE)/javaunohelper/pom.juh.xml > debian/pom.juh.xml
 	sed -e s/@version@/$(shell echo $(DEB_VERSION_UPSTREAM) | cut -d~ -f1)/ \
 		< $(SOURCE_TREE)/unoil/pom.unoil.xml > debian/pom.unoil.xml
-	sed -e s/@version@/$(shell echo $(DEB_VERSION_UPSTREAM) | cut -d~ -f1)/ \
-		< $(SOURCE_TREE)/bean/pom.officebean.xml > debian/pom.officebean.xml
-	for i in juh jurt unoil ridl unoloader officebean; do \
+	for i in juh jurt unoil ridl unoloader; do \
 		mh_installpoms -plib$$i-java; \
 		mh_installjar -plib$$i-java -l debian/pom.$$i.xml instdir/program/classes/$$i.jar; \
 	done
 	# create symlinks where LO expects them
-	for i in juh jurt unoil ridl unoloader officebean; do \
+	for i in juh jurt unoil ridl unoloader; do \
 		mkdir -p $(CURDIR)/debian/lib$$i-java/$(OODIR)/program/classes; \
 		cd $(CURDIR)/debian/lib$$i-java/$(OODIR)/program/classes; \
 		ln -s /usr/share/java/$$i.jar $$i.jar; \
 	done
 
 	# fix up Class-Paths
-	jh_classpath --classpath="ridl.jar unoil.jar jurt.jar juh.jar" \
-		debian/libofficebean-java/usr/share/java/officebean.jar
 	# javaunohelper/com/sun/star/comp/helper/Bootstrap.java:                NativeLibraryLoader.loadLibrary( Bootstrap.class.getClassLoader(), "juh" );
 	# seems to work nevertheless (if called from program/classes?) but fix it
  	# nevertheless
@@ -3480,7 +3490,7 @@ ifeq "$(ENABLE_JAVA)" "y"
 	# and do not fit anyway given ure has a different versioning scheme. Excluded
 	# above, readd here  unversioned
 	perl -pi -e 's/^(java:Depends.*$$)/\1, ure/' \
-		debian/libreoffice-officebean.substvars
+		debian/libofficebean-java.substvars
 endif
 # This switch to dh_shlibdeps reduces the 'libXXX not found' warnings but
 # causes ldd crashes sometimes when used with fakeroot:
