@@ -9,6 +9,10 @@ libreoffice (1:6.4.0~rc1-7) UNRELEASED; urgency=medium
        same with libjurt-java (libjava_uno.so)
      - add some explicit dependencies on the new java packages to where they are
        mentioned in Class-Path:
+   * debian/rules, debian/control.in: 
+     - make libofficebean-java arch-dep and install libofficebean.so there
+       (into /usr/lib/jni with a symlink from /usr/lib/libreoffice/program);
+       make libreoffice-officebean a transitional package for libofficebean-java
 
  -- Rene Engelhard <rene@debian.org>  Thu, 02 Jan 2020 02:41:13 +0100
 
